--- a/machine_translation/20180530_教師なし機械翻訳.ipynb
+++ b/machine_translation/20180530_教師なし機械翻訳.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "### タイトル\n",
     "\n",
-    "Phrase-Based & Neural Unsupervised Machine Translation\n",
+    "[Phrase-Based & Neural Unsupervised Machine Translation](https://arxiv.org/pdf/1804.07755.pdf)\n",
     "\n",
     "### 解説記事\n",
     "\n",
